--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,5 @@
   "singleQuote": true,
   "semi": false,
   "printWidth": 90,
-  "singleAttributePerLine": false
+  "singleAttributePerLine": true
 }
